kubernetes/jenkins.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels:
    for: jenkins
    to: agent
  namespace: goalapp
spec:
  containers:
    - name: jenkins
      image: jenkins/jenkins:lts
      ports:
      - containerPort: 8080
      - containerPort: 31999
      volumeMounts:
        - name: jenkins-vol
          mountPath: /var/jenkins_home
      resources:
        requests:
          cpu: 700m
          memory: 1Gi
        limits:
          cpu: 1000m
          memory: 1.5Gi
  volumes:
    - name: jenkins-vol
      persistentVolumeClaim:
        claimName: jenkins-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: goalapp
spec:
  type: ClusterIP
  selector:
    for: jenkins
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: agent-svc
  namespace: goalapp
spec:
  type: NodePort
  selector: 
    to: agent
  ports:
  - protocol: TCP
    port: 31999
    targetPort: 31999
    nodePort: 31999
