kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goalapp-ingress
  namespace: goalapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  tls:
    - secretName: goalssl
      hosts:
        - "goals.sharmaaws.co"
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend: 
              service:
                name: goalapp
                port:
                  number: 5000
          - path: /jenkins/(.*)
            pathType: Prefix
            backend:
              service:
                name: jenkins-svc
                port:
                  number: 80

#     As this yaml comprises of "TLS" under spec, make sure that the tls secret is available before applying this yaml.
# To generate the self-signed certificate using openssl, execute the following command:
#     openssl req -x509 -newkey rsa:4096 -sha256 -nodes -keyout <filename.key> -out <file.crt> -subj "/CN=domain.com" -days 365
# To store the TLS as a secret in the cluster, execute the following command:
#     kubectl create secret tls <secret_name> --cert <filename.key> --key <filename.key>
